CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_status_hist__x.object
<CustomObject>
    <description>batchsit$t_auth_status_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_status_hist</externalName>
    <fields>
        <fullName>cde_reason_change_auth__c</fullName>
        <description>cde_reason_change_auth</description>
        <externalDeveloperName>cde_reason_change_auth</externalDeveloperName>
        <label>Auth Reason Code change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_auth__c</fullName>
        <description>cde_status_auth</description>
        <externalDeveloperName>cde_status_auth</externalDeveloperName>
        <label>Auth Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_status_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Auth ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Status Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_status_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_status_auth__c</fullName>
        <description>idn_status_auth</description>
        <externalDeveloperName>idn_status_auth</externalDeveloperName>
        <label>Identifier Authorization Status</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_status__x</referenceTo>
        <relationshipLabel>Authorization Status Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_auth_status_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_status_auth_hist__c</fullName>
        <description>idn_status_auth_hist</description>
        <externalDeveloperName>idn_status_auth_hist</externalDeveloperName>
        <label>Identifier Authorization Status History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_status_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_day_of_update_last__c</fullName>
        <description>ind_day_of_update_last</description>
        <externalDeveloperName>ind_day_of_update_last</externalDeveloperName>
        <label>Last update of the day</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isactive</description>
        <externalDeveloperName>isactive</externalDeveloperName>
        <label>ISACTIVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_status_auth__c</fullName>
        <description>nbr_seq_status_auth</description>
        <externalDeveloperName>nbr_seq_status_auth</externalDeveloperName>
        <label>Auth Number Sequence Status</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization Status History</label>
    <pluralLabel>Authorization Status History</pluralLabel>
</CustomObject>